--- a/config/database.yml
+++ b/config/database.yml
@@ -78,6 +78,8 @@ production:
 test:
   <<: *default
   database: SAVA_test
+  username: SAVA
+  password: SAVA
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
