--- a/test/fixtures/service_types.yml
+++ b/test/fixtures/service_types.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  id: 
-  type: 
+manha:
+  id: 1
+  type: Turno manhã
 
-two:
-  id: 
-  type: 
+integral:
+  id: 2
+  type: Turno Integral
