--- a/test/fixtures/tuition_statuses.yml
+++ b/test/fixtures/tuition_statuses.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  id: 
-  status: 
+pago:
+  id: 1
+  status: Pago
 
-two:
-  id: 
-  status: 
+pendente:
+  id: 2
+  status: Pendente
