--- a/test/fixtures/tuitions.yml
+++ b/test/fixtures/tuitions.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  customer_id: 
+  customer_id: 1
   due_date: 2015-05-10
-  status: 
+  status: pago
 
 two:
-  customer_id: 
+  customer_id: 2
   due_date: 2015-05-10
-  status: 
+  status: pendente
